jss-compiler/tests/lexer/invalid/invalid_logical_assign.jss
function void main() {
    let bool flag = true;
    flag &&= false;
}
